# get-resume-direction

./: .env.dev  .env.example  .env.prod  .env.test  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260216_0001_init_core_schema.py  20260216_0002_add_campus_events_and_orders.py
app/: main.py
app/core/: config.py  database.py  deps.py  response.py
app/crawler/: base.py  campus_base.py  campus_registry.py  client.py  registry.py  types.py  types_event.py
app/dao/: campus_event_dao.py  company_dao.py  crawl_run_dao.py  job_dao.py  location_dao.py  service_order_dao.py  source_dao.py
app/exceptions/: base.py  codes.py
app/logging/: config.py
app/middlewares/: exception_handler.py  request_context.py
app/models/: __init__.py  base.py  campus_event.py  company.py  crawl_run.py  enums.py  job.py  job_version.py  location.py  resume.py  service_order.py  skill.py  source.py  user.py
app/schemas/: campus_event.py  common.py  crawler.py  job.py  order.py  resume.py  source.py
app/service/: campus_crawl_service.py  campus_event_service.py  compliance_service.py  crawl_service.py  job_service.py  order_service.py  source_service.py
app/tasks/: executor.py  scheduler.py
app/utils/: hash.py  location.py  normalizers.py  salary.py
configs/: category_map.yaml  education_map.yaml  sites.yaml
scripts/: collect_job51_signed_urls.py  init_db.sh  run_campus_crawl.py  run_demo_crawl.py  seed_sources.py  set_job51_cupid_profile.py  set_job51_vapi_profile.py  set_source_cookie.py
(+86 files in other folders)
