[project]
name = "china-job-aggregator"
version = "0.1.0"
description = "China campus/experienced hiring job aggregation platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.32",
  "asyncpg>=0.29.0",
  "alembic>=1.13.2",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "apscheduler>=3.10.4",
  "tenacity>=8.5.0",
  "httpx>=0.27.0",
  "PyYAML>=6.0.2",
  "orjson>=3.10.7",
  "structlog>=24.4.0"
]

[dependency-groups]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.1",
  "mypy>=1.11.1"
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = [
  "app",
  "alembic",
  "configs",
  "scripts",
  "tests",
  "README.md",
  "alembic.ini",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
